added styles.css for improve  my page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/styles.css">
+    <title>Lasagna</title>
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="../img/lasagna.jpeg" alt="Lasagna">
+    <div class="image-center">
+        <img class="width-height" src="../img/lasagna.jpeg" alt="Lasagna">
+    </div>
     <p>Lasagna is a classic Italian dish made with layers of pasta, meat sauce, and bechamel sauce. It is a hearty and flavorful dish that is perfect for a family meal or special occasion.</p>
     <h2>Ingredients</h2>
     <ul>
