--- a/recipes/reuben-casserole.html
+++ b/recipes/reuben-casserole.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/styles.css">
+    <title>Reuben Casserole</title>
 </head>
 <body>
     <h1>Reuben Casserole</h1>
-    <img src="../img/reuben-casserole.jpg" alt="Reuben Casserole" width="500" height="300">
+    <div class="image-center">
+        <img class="width-height" src="../img/reuben-casserole.jpg" alt="Reuben Casserole">
+    </div>
     <p>Reuben Casserole is a hearty and flavorful dish that is perfect for a cold winter day. It is made with layers of rye bread, corned beef, sauerkraut, and Swiss cheese.</p>
     <h2>Ingredients</h2>
     <ul>
