--- a/recipes/fried-boursin-cheese.html
+++ b/recipes/fried-boursin-cheese.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/styles.css">
+    <title>Fried Boursin Cheese</title>
 </head>
 <body>
     <h1>Fried Boursin Cheese</h1>
-    <img src="../img/fried-boursin-cheese.jpg" alt="Fried Boursin Cheese" width="500" height="300">
+    <div class="image-center">
+        <img class="width-height" src="../img/fried-boursin-cheese.jpg" alt="Fried Boursin Cheese">
+    </div>
     <p>Fried boursin cheese in a small bite-sized package! These fun appetizers are crunchy on the outisde, with a delicious warm herby center.</p>
     <h2>Ingredients</h2>
     <ul>
